--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,11 @@
 	path = basestation_ws/src/unitree_ros_to_real
 	url = https://github.com/ICE9-Robotics/unitree_ros_to_real.git
 	branch = unitree_go1
+[submodule "basestation_ws/src/joystick_drivers"]
+	path = basestation_ws/src/joystick_drivers
+	url = https://github.com/ros-drivers/joystick_drivers.git
+	branch = melodic-devel
+[submodule "basestation_ws/src/teleop_twist_joy"]
+	path = basestation_ws/src/teleop_twist_joy
+	url = https://github.com/ros-teleop/teleop_twist_joy
+	branch = indigo-devel
