--- a/.gitmodules
+++ b/.gitmodules
@@ -16,8 +16,8 @@
 	branch = melodic-devel
 [submodule "basestation_ws/src/teleop_twist_joy"]
 	path = basestation_ws/src/teleop_twist_joy
-	url = https://github.com/ros-teleop/teleop_twist_joy
-	branch = indigo-devel
+	url = https://github.com/ICE9-Robotics/teleop_twist_joy.git
+	branch = indigo-devel-omni
 [submodule "basestation_ws/src/unitree_ugi_diagnostics"]
 	path = basestation_ws/src/unitree_ugi_diagnostics
 	url = https://github.com/ICE9-Robotics/unitree_ugi_diagnostics.git
