--- a/basestation_ws/src/ice9_unitree_basestation/config/ps4.config.yaml
+++ b/basestation_ws/src/ice9_unitree_basestation/config/ps4.config.yaml
@@ -2,8 +2,13 @@ axis_linear: 1
 scale_linear: 0.7
 scale_linear_turbo: 1.5
 
-axis_angular: 0
+axis_linear_y: 0
+scale_linear_y: 0.4
+scale_linear_y_turbo: 0.8
+
+axis_angular: 3
 scale_angular: 0.4
+scale_angular_turbo: 0.4
 
 enable_button: 4  # L1 shoulder button
 enable_turbo_button: 5  # R1 shoulder button
